<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sadBgColor"
    tools:context=".activities.MainActivity">

    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <RelativeLayout
        android:id="@+id/maskLayout"
        android:layout_width="match_parent"
        android:layout_height="150dp">

        <ImageView
            android:id="@+id/maskImageView"
            android:layout_width="120dp"
            android:layout_height="130dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/mask_sad"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/maskTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="-30dp"
            android:layout_toEndOf="@id/maskImageView"
            android:gravity="center"
            android:text="@string/negative_text_ru"
            android:textColor="@color/textColor"
            android:textSize="24sp"
            android:textStyle="bold"
            android:typeface="serif" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/emotionLayout"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_below="@id/maskLayout">

        <TextView
            android:id="@+id/emotionTextView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@id/emotionImageView"
            android:gravity="center"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/emotion_text_ru"
            android:textColor="@color/textColor"
            android:textSize="24sp"
            android:typeface="serif" />

        <ImageView
            android:id="@+id/emotionImageView"
            android:layout_width="92dp"
            android:layout_height="100dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:background="@drawable/mind"
            tools:ignore="ContentDescription" />
    </RelativeLayout>

    <Spinner
        android:id="@+id/emotionSpinner"
        android:layout_width="270dp"
        android:layout_height="43dp"
        android:layout_below="@id/emotionLayout"
        android:layout_marginStart="20dp"
        android:background="@drawable/spinner_background"
        android:dropDownWidth="match_parent"
        android:dropDownSelector="@color/sadBgColor"
        android:gravity="center"
        android:popupBackground="@color/sadSpinnerColor"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/stateTextView"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_below="@id/emotionSpinner"
        android:gravity="center"
        android:text="@string/state_text_ru"
        android:textColor="@color/textColor"
        android:textSize="22sp"
        android:textStyle="bold"
        android:typeface="serif" />

    <LinearLayout
        android:id="@+id/statesLayout"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_below="@id/stateTextView"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/headStateTextView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@id/headStateSpinner"
                android:gravity="center_vertical|end"
                android:text="@string/head_state_text_ru"
                android:textColor="@color/textColor"
                android:textSize="20sp"
                android:textStyle="italic"
                android:typeface="serif" />

            <Spinner
                android:id="@+id/headStateSpinner"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:dropDownWidth="match_parent"
                android:dropDownSelector="@color/sadBgColor"
                android:gravity="center|end"
                android:popupBackground="@color/sadSpinnerColor" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/heartStateTextView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@id/heartStateSpinner"
                android:gravity="center_vertical|end"
                android:text="@string/heart_state_text_ru"
                android:textColor="@color/textColor"
                android:textSize="20sp"
                android:textStyle="italic"
                android:typeface="serif" />

            <Spinner
                android:id="@+id/heartStateSpinner"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:dropDownWidth="match_parent"
                android:dropDownSelector="@color/sadBgColor"
                android:popupBackground="@color/sadSpinnerColor" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/bodyStateTextView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@id/bodyStateSpinner"
                android:gravity="center_vertical|end"
                android:text="@string/body_state_text_ru"
                android:textColor="@color/textColor"
                android:textSize="20sp"
                android:textStyle="italic"
                android:typeface="serif" />

            <Spinner
                android:id="@+id/bodyStateSpinner"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:dropDownWidth="match_parent"
                android:dropDownSelector="@color/sadBgColor"
                android:popupBackground="@color/sadSpinnerColor" />
        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/bottomLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/statesLayout"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/switchTextView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@id/switchButton"
            android:gravity="center"
            android:text="@string/switch_first_text_ru"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/switchButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:background="@drawable/arrow_right" />
    </RelativeLayout>

</RelativeLayout>
